Created Dioxus version and common Deno API for high scores.

--- a/rusty-tetris/frontend/index.html
+++ b/rusty-tetris/frontend/index.html
@@ -8,7 +8,7 @@
   {
     "imports": {
       "xstate": "https://esm.sh/xstate@5.18.2",
-      "../pkg/tetris_core.js": "/pkg/tetris_core.js"
+      "../../pkg/tetris_core.js": "../pkg/tetris_core.js"
     }
   }
   </script>
@@ -260,6 +260,6 @@
 </head>
 <body>
   <div id="game-container"></div>
-  <script type="module" src="/dist/main.js"></script>
+  <script type="module" src="dist/main.js"></script>
 </body>
 </html>
