--- a/webgl-tetris/frontend/index.html
+++ b/webgl-tetris/frontend/index.html
@@ -7,7 +7,7 @@
   <script type="importmap">
   {
     "imports": {
-      "../pkg/tetris_core.js": "/pkg/tetris_core.js"
+      "../../pkg/tetris_core.js": "../pkg/tetris_core.js"
     }
   }
   </script>
@@ -292,6 +292,6 @@
 </head>
 <body>
   <div id="game-container"></div>
-  <script type="module" src="/dist/main.js"></script>
+  <script type="module" src="dist/main.js"></script>
 </body>
 </html>
