Updated pages to serve from root

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="game-container">
       <iframe
         id="game-frame"
-        src="../rusty-tetris/frontend/index.html"
+        src="rusty-tetris/frontend/index.html"
         width="700"
         height="720"
         scrolling="no"
@@ -167,9 +167,9 @@
 
     <script>
       const games = {
-        rusty: "../rusty-tetris/frontend/index.html",
-        webgl: "../webgl-tetris/frontend/index.html",
-        dioxus: "../diox-tetris/target/dx/diox-tetris/debug/web/public/index.html?v=9",
+        rusty: "rusty-tetris/frontend/index.html",
+        webgl: "webgl-tetris/frontend/index.html",
+        dioxus: "diox-tetris/target/dx/diox-tetris/debug/web/public/index.html?v=9",
       };
 
       const frame = document.getElementById("game-frame");
