added compiled dioxus to repo

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       const games = {
         rusty: "rusty-tetris/frontend/index.html",
         webgl: "webgl-tetris/frontend/index.html",
-        dioxus: "diox-tetris/target/dx/diox-tetris/debug/web/public/index.html?v=9",
+        dioxus: "diox-tetris/dist/index.html",
       };
 
       const frame = document.getElementById("game-frame");
